<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dadada"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.raptor.swagcalculator.swagcalculator.settings"
    android:animateLayoutChanges="true">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_blue"
        android:paddingTop="@dimen/tool_bar_top_padding"
        android:theme="@style/MyCustomToolBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="8dp">



        </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:id="@+id/viewholder_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_marginTop="20dp"
                android:background="#fff"
                android:elevation="6dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:text="@string/sound"
                    android:textSize="30dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/soundcheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="soundcheckbox"
                        android:text="@string/playsoundoncalculation"
                        android:textSize="20sp"
                         />



                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:elevation="6dp"
                android:orientation="vertical"
                android:padding="6dp"
                android:animateLayoutChanges="true">


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:text="Start"
                    android:textSize="30dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/selectstartscreen"
                    android:textSize="20dp" />

                <RadioGroup
                    android:id="@+id/rg1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/rb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name" />

                    <RadioButton
                        android:id="@+id/rb2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_activity_pythagorean" />

                    <RadioButton
                        android:id="@+id/rb3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_activity_abc__formula" />

                    <RadioButton
                        android:id="@+id/rb4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_activity_circle__surface" />

                    <RadioButton
                        android:id="@+id/rb5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flashlight" />


                </RadioGroup>
                <Button
                    android:id="@+id/expandscreenbutton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="expandscreenselection"
                    android:text="@string/taptoexpand" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:animateLayoutChanges="true"
                android:background="#fff"
                android:elevation="6dp"
                android:orientation="vertical"
                android:padding="6dp"
                >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:text="Visuals"
                    android:textSize="30dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />
                <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="oldbuttonstyle"
                    android:id="@+id/buttoncheckbox"
                android:text="@string/oldbuttonstyle"
                android:textSize="20sp"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/changecolors"
                    android:textSize="20sp"
                    android:paddingTop="4dp"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />



                <LinearLayout
                    android:id="@+id/colorbuttons"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">


                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="left|center_vertical"
                        android:onClick="swagcolor"
                        android:text="@string/app_name" />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="left|center_vertical"
                        android:onClick="pythagoreancolor"
                        android:text="@string/title_activity_pythagorean" />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="left|center_vertical"
                        android:onClick="abccolor"
                        android:text="@string/title_activity_abc__formula" />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="left|center_vertical"
                        android:onClick="circlecolor"
                        android:text="@string/title_activity_circle__surface" />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="left|center_vertical"
                        android:onClick="flashlightcolor"
                        android:text="@string/flashlight" />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="left|center_vertical"
                        android:onClick="mathcolor"
                        android:text="@string/title_activity_math_functions" />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="left|center_vertical"
                        android:onClick="settingscolor"
                        android:text="@string/title_activity_settings" />
                </LinearLayout>

                <Button
                    android:id="@+id/expandbutton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="expandcolorselection"
                    android:text="@string/taptoexpand" />



            </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:animateLayoutChanges="true"
            android:background="#fff"
            android:elevation="6dp"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:text="Navigation Drawer"
                android:textSize="30dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="imagecheckbox"
                android:id="@+id/imagecheckbox"
                android:text="Use image instead of gif in navigation drawer."
                android:textSize="20sp"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>