<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.raptor.swagcalculator.swagcalculator.MathFunctions">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_blue"
        android:paddingTop="@dimen/tool_bar_top_padding"
        android:theme="@style/MyCustomToolBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="8dp"/>

    <FrameLayout
        android:id="@+id/mathactionbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_blue"
        android:elevation="8dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/title_activity_math_functions"
            android:textColor="#fff"
            android:textSize="25sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="?attr/selectableItemBackground"
            android:onClick="calculate"
            android:text="@string/calculate"
            android:textColor="#fff" />

    </FrameLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swiptorefresh"
        
        >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:fitsSystemWindows="true"
            android:id="@+id/contentcontainer">

            <LinearLayout
                android:id="@+id/inputlayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputlayout"
                android:layout_margin="6dp"
                android:animateLayoutChanges="true"
                android:background="#fff"
                android:elevation="6dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edittext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890-."
                    android:hint="@string/enteranumber"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/answerlayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:animateLayoutChanges="true"
                android:background="#fff"
                android:elevation="6dp"
                android:orientation="vertical">



                <TextView
                    android:id="@+id/squareroot"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="√ ="
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/squared"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="² ="
                    android:textSize="20sp" />
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topowerof"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/powerof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="1234567890-."

        android:text="3"
        android:inputType="numberDecimal" />
    <TextView
        android:id="@+id/topowerof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" = "
        android:textSize="20sp" />
    </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
